--- a/frontend/public/dashboard.html
+++ b/frontend/public/dashboard.html
@@ -98,7 +98,7 @@
     </section>
 </main>
 
-<script src="/src/dashboard.js"></script>
+<script type="module" src="../src/dashboard.js"></script>
 </body>
 </html>
 
