--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -72,16 +72,6 @@
             background: #9ca3af;
             cursor: default;
         }
-        .error {
-            margin-top: 8px;
-            font-size: 13px;
-            color: #b91c1c;
-        }
-        .success {
-            margin-top: 8px;
-            font-size: 13px;
-            color: #166534;
-        }
         .hint {
             margin-top: 12px;
             font-size: 12px;
@@ -116,7 +106,7 @@
     </form>
 </div>
 
-<script src="/src/login.js"></script>
+<script src="../src/login.js"></script>
 
 </body>
 </html>
