--- a/frontend/public/orders.html
+++ b/frontend/public/orders.html
@@ -135,7 +135,7 @@
     </section>
 </main>
 
-<script src="/src/orders.js"></script>
+<script type="module" src="../src/orders.js"></script>
 </body>
 </html>
 
