--- a/frontend/public/products.html
+++ b/frontend/public/products.html
@@ -55,11 +55,6 @@
             cursor: pointer;
         }
         button:hover { background: #1d4ed8; }
-        .quick-create {
-            margin-top: 12px;
-            padding-top: 12px;
-            border-top: 1px solid #e5e7eb;
-        }
         .quick-create h3 {
             margin: 0 0 8px;
             font-size: 14px;
@@ -162,6 +157,6 @@
     </section>
 </main>
 
-<script src="/src/products.js"></script>
+<script type="module" src="../src/products.js"></script>
 </body>
 </html>
