--- a/frontend/public/warehouse.html
+++ b/frontend/public/warehouse.html
@@ -70,12 +70,6 @@
         }
         th { background: #f9fafb; }
         .message { font-size: 13px; margin-top: 4px; color: #b91c1c; }
-        .success { font-size: 13px; margin-top: 4px; color: #166534; }
-        .quick-create {
-            margin-top: 12px;
-            padding-top: 12px;
-            border-top: 1px solid #e5e7eb;
-        }
         .quick-create h3 {
             margin: 0 0 8px;
             font-size: 13px;
@@ -193,7 +187,7 @@
     </section>
 </main>
 
-<script src="/src/warehouse.js"></script>
+<script type="module" src="../src/warehouse.js"></script>
 </body>
 </html>
 
